Fix logging options for Java 9+
Bug: T222574
Change-Id: I8a9db600ed765a1fd5105b26bf27719260ebe0ca